# InsideLoop

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  InsideLoop.vcxproj  InsideLoop.vcxproj.filters  InsideLoopBenchmark.vcxproj  InsideLoopBenchmark.vcxproj.filters  InsideLoopUnitTest.vcxproj  InsideLoopUnitTest.vcxproj.filters  LICENSE.txt  Program.sln  README.md  README.txt  TODO.txt  benchmark.cpp  cmake_install.cmake  main.cpp  test.cpp
doc/: Array.rst  Array2D.rst  ArrayView.rst  CompilingFirstProgram.rst  LinearAlgebra.rst  Makefile  Map.rst  README.txt  String.rst  conf.py  doxygen-breathe.conf  doxygen.conf  first-example.rst  index.rst  integer.rst  license.rst  make.bat
gbenchmark/include/benchmark/: benchmark.h  benchmark_api.h  reporter.h
gbenchmark/src/: check.h  cycleclock.h  internal_macros.h  re.h  stat.h
gtest/gtest/: gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
gtest/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h
gtest/src/: gtest-internal-inl.h
il/: Array.h  Array2C.h  Array2D.h  Array2DView.h  Array3C.h  Array3D.h  Array4C.h  Array4D.h  ArrayView.h  BandArray2C.h  CudaArray2D.h  Deque.h  Dynamic.h  File.h  HashMap.h  HashMapArray.h  HashTable.h  Info.h  LowerArray2D.h  Map.h  MapArray.h  MatrixFreeGmres.h  Queue.h  Set.h  SmallArray.h  SparseArray2C.h  SparseMatrixCSR.h  StaticArray.h  StaticArray2C.h  StaticArray2D.h  StaticArray3D.h  StaticArray4D.h  Status.h  String.h  StringView.h  Timer.h  Toml.h  TriDiagonal.h  Type.h  U16String.h  (+17 more)
il/algorithm/: algorithmArray.h  algorithmArray2D.h
il/benchmark/alignment/: alignment.h
il/benchmark/memory/: matrix_multiplication.cpp  matrix_multiplication.h
il/benchmark/parallel/map/: mandelbrot.h  vector_addition.h
il/benchmark/parallel/reduce/: kmeans_clustering.cpp  kmeans_clustering.h  kmeans_clustering_0.cpp  kmeans_clustering_0.h  kmeans_main.cpp  kmeans_main.h  scalar_product.h
il/benchmark/parallel/scan/: integrate.h  partial_sum.h
il/benchmark/tools/memory/: memory.h
il/benchmark/tools/timer/: Benchmark.h  Timer.h
il/benchmark/types/: 32-vs-64-bit-integers.cpp
il/blas/: blaze-MKL.cpp
il/container/1d/: Array.h  ArrayView.h  SmallArray.h  StaticArray.h
il/container/1d/_benchmark/: Array_benchmark.cpp  Array_il_vs_std_benchmark.h  alignment_benchmark.cpp  append_benchmark.cpp
il/container/1d/_test/: Array_test.cpp  Dummy_test.cpp  Dummy_test.h
il/container/2d/: Array2C.h  Array2CView.h  Array2D.h  Array2DView.h  BandArray2C.h  LowerArray2D.h  SparseArray2C.h  SparseMatrixCSR.h  StaticArray2C.h  StaticArray2D.h  TriDiagonal.h  UpperArray2D.h
il/container/2d/_test/: Array2C_test.cpp  Array2D_test.cpp
il/container/3d/: Array3C.h  Array3D.h  Array3DView.h  StaticArray3D.h
il/container/3d/_test/: Array3D_test.cpp
il/container/4d/: Array4C.h  Array4D.h  StaticArray4D.h
il/container/cuda/: cudaCopy.h  cuda_copy.h
il/container/cuda/1d/: CudaArray.h
il/container/cuda/2d/: CudaArray2D.h  CudaSparseMatrixCSR.h
il/container/deque/: Deque.h
il/container/dynamic/: Dynamic.h  Type.h
il/container/dynamic/_benchmark/: Dynamic_benchmark.cpp
il/container/dynamic/_test/: Dynamic_test.cpp
il/container/hash/: HashFunction.h  HashMap.h  HashMapArray.h  Location.h  Map.h  MapArray.h  Set.h  Spot.h  spot_t.h
il/container/hash/_benchmark/: Map_il_vs_std_benchmark.h  Map_string_benchmark.cpp
il/container/hash/_test/: Map_test.cpp
il/container/hash_table/: HashFunction.h  HashTable.h
il/container/info/: Info.h  Status.h
il/container/info/_test/: Info_test.cpp
il/container/queue/: Queue.h
il/container/string/: String.h  StringView.h  U16String.h  UTF16String.h  algorithmString.h  algorithm_string.h  unicode.h  view_string.h
il/container/string/_benchmark/: String_benchmark.h  String_il_vs_std_benchmark.h
il/container/string/_test/: StringView_test.cpp  String_test.cpp
il/container/tree/: Tree.h
il/core/: Error.h  Status.h  arg.h  base.h  config.h  core.h  ilassert.h  ildef.h
il/core/_test/: Status_test.cpp
il/core/math/: safe_arithmetic.h
il/core/math/_test/: safe_arithmetic_test.cpp
il/core/memory/: allocate.h
il/image/: ppm.h
il/io/: File.h  io_base.h  json.h  numpy.cpp  numpy.h  parse.h  png.cpp  png.h  ppm.h  toml.cpp  toml.h  yaml.h
il/io/_test/: numpy_test.cpp
il/io/filepack/: filepack.h
il/io/format/: format.cc  format.h  format_il.h  ostream.h
il/io/format/old/: format.h
il/io/numpy/: numpy.cpp  numpy.h
il/io/png/: png.cpp  png.h
il/io/ppm/: ppm.h
il/io/protobuf/: protobuf.h
il/io/toml/: toml.cpp  toml.h
il/io/toml/_test/: toml_valid_test.cpp
il/linearAlgebra/: Matrix.h
il/linearAlgebra/dense/_test/: norm_test.cpp
il/linearAlgebra/dense/blas/: blas.h  blas_config.h  blas_static.h  dot.h
il/linearAlgebra/dense/factorization/: Cholesky.h  Eigen.h  Householder.h  LU.h  Singular.h  linearSolve.h
il/linearAlgebra/matrixFree/solver/: Cg.h  Gmres.cpp  Gmres.h  MatrixFreeGmres.h
il/linearAlgebra/sparse/blas/: sparseBlas.h  sparseLinearAlgebra.h
il/linear_algebra/: blas.h  blas_info.h  dot.h  linear_solve.h
il/linear_algebra/_benchmark/: blas_benchmark.cpp  linear_solve_benchmark.cpp  test.cpp
il/linear_algebra/_test/: blas_test.cpp  dot_test.cpp  linear_solve_test.cpp
il/linear_algebra/dense/: norm.h
il/linear_algebra/factorization/: Cholesky.h  Eigen.h  HouseHolder.h  LowerCholesky.h  PartialLU.h  Singular.h
il/linear_algebra/sparse/: GmresIlu0Solver.h  PardisoSolver.h
il/math/: safe_arithmetic.h
il/math/_test/: safe_arithmetic_test.cpp
il/pretty_print/gdb/: printers.py  skip
il/pretty_print/lldb/: data_formatters.py  lldbinit
il/pretty_print/visual_studio/: README.txt  il.natvis
il/random/: sobol.h
il/unit/: time.h
prettyPrint/gdb/: gdbinit  printers.py  skip.txt
prettyPrint/lldb/: data_formatters.py
prettyPrint/visual_studio/: il.natvis
pretty_print/gdb/: printers.py
(+71 files in other folders)
